--- a/css/jquery.terminal.css
+++ b/css/jquery.terminal.css
@@ -12,7 +12,7 @@
  * Copyright (c) 2011-2018 Jakub Jankiewicz <http://jcubic.pl>
  * Released under the MIT license
  *
- * Date: Sun, 14 Oct 2018 15:04:43 +0000
+ * Date: Sun, 14 Oct 2018 17:35:28 +0000
  */
 .terminal .terminal-output .format, .cmd .format,
 .cmd .prompt, .cmd .prompt div, .terminal .terminal-output div div{
@@ -78,6 +78,9 @@
     overflow-y: auto;
     /* overflow-x: hidden; */
 }
+terminal.temp {
+    visibility: hidden;
+}
 .terminal {
     contain: content;
 }
@@ -85,10 +88,17 @@ body.terminal {
     min-height: 100vh;
     height: 100%;
 }
-body.terminal {
-    margin: 0;
+html {
+    height: 100%;
 }
-.terminal > div {
+body.terminal, body.full-screen-terminal {
+    margin: 0;
+    height: 100%;
+}
+body.full-screen-terminal .terminal {
+    height: 100%;
+}
+.terminal > div:not(.font) {
     min-height: 100%;
 }
 .terminal > .resizer, .terminal > .font .resizer {
